# statemachinecpp

./: CMakeLists.txt  justfile
cmake/: base_compile_options.cmake  documentation.cmake
docs/: Doxyfile.in
docs/pages/: contact.md
src/: manager.main.cpp  mantest.main.cpp  messageQueue.hpp  myMessage.hpp  processor.hpp
src/module1/: CMakeLists.txt  module1.cpp  module1.hpp
src/states/: activeState.cpp  activeState.hpp  ateIdleState.cpp  ateIdleState.hpp  ateInitState.cpp  ateInitState.hpp  baseState.hpp  idleState.cpp  idleState.hpp  states.cpp  states.hpp  terminateState.cpp  terminateState.hpp  transitionHandler.cpp  transitionHandler.hpp
